--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Parent’aile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="icon" href="/service-icons/app-icon.png" type="image/png" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Inspiration:400|Sue+Ellen+Francisco:400|Suez+One:400|Style+Script:400|Stint+Ultra+Expanded:400");
   </style>
